--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,10 @@
-add_executable(Main main.cpp)
+# project(AdvancedVoice)
+
+add_executable(AdvancedVoice main.cpp)
+set_target_properties(AdvancedVoice PROPERTIES 
+    CXX_STANDARD 17
+    OUTPUT_NAME server
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+
+target_link_libraries(AdvancedVoice datachannel-static nlohmann_json)
