--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 blinker==1.7.0
 click==8.1.7
 flask==3.0.0
+flask-sock==0.7.0
+h11==0.14.0
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+simple-websocket==1.0.0
 werkzeug==3.0.1
+wsproto==1.2.0
 zipp==3.17.0
