Added opus audio libraries

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/libdatachannel"]
 	path = libs/libdatachannel
 	url = https://github.com/paullouisageneau/libdatachannel.git
+[submodule "libs/opus"]
+	path = libs/opus
+	url = https://github.com/xiph/opus.git
