--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # project(AdvancedVoice)
 
-add_executable(AdvancedVoice main.cpp)
+add_executable(AdvancedVoice main2.cpp)
 set_target_properties(AdvancedVoice PROPERTIES 
     CXX_STANDARD 17
     OUTPUT_NAME server
