Comminting what exists of audio matrix.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # project(AdvancedVoice)
 
 
-add_executable(AdvancedVoice main2.cpp client.hpp RingBuffer.hpp audioBuffer.hpp)
+add_executable(AdvancedVoice main2.cpp client.hpp RingBuffer.hpp audioBuffer.hpp mixingMatrix.hpp)
 set_target_properties(AdvancedVoice PROPERTIES 
     CXX_STANDARD 17
     OUTPUT_NAME server
